--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,11 @@ cache: bundler
 language: ruby
 
 rvm:
-  - 2.2.7
-  - 2.3.4
-  - 2.4.1
+  - 2.2.9
+  - 2.3.6
+  - 2.4.3
   - 2.5.1
+  - ruby-head
 
 gemfile:
   - gemfiles/rails_4.0.gemfile
